--- a/themes/cactus/layouts/partials/profile.html
+++ b/themes/cactus/layouts/partials/profile.html
@@ -1,7 +1,7 @@
 <div class="profile">
     <section id="wrapper">
         <header id="header">
-            <a href='{{ .Site.BaseURL }}about'>
+            <a href='{{ .Site.BaseURL }}about.html'>
                 <img id="avatar" class="2x" src="{{ .Site.BaseURL }}images/avatar.png"/>
             </a>
             <h1>{{ .Site.Params.name }}</h1>
