--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,7 @@ a,
 }
 
 ul 	{ margin:0; padding:0; }
+ul  { margin-bottom: 20px;}
 li	{ list-style-type:circle; list-style-position:inside; }
 
 /* Line Height */
