--- a/themes/cactus/layouts/_default/single.html
+++ b/themes/cactus/layouts/_default/single.html
@@ -31,6 +31,10 @@
                 <section id="sharing">
                     {{ partial "share.html" . }}
                 </section>
+
+                <section id="twitter-site">
+                    {{ partial "twitter.html" . }}
+                </section>
             </footer>
 
             {{ if isset .Site.Params "disqusShortname" }}
