--- a/themes/cactus/layouts/partials/post-list.html
+++ b/themes/cactus/layouts/partials/post-list.html
@@ -1,10 +1,22 @@
+{{ $baseurl := .Site.BaseURL }}
+
 <ul id="post-list">
+    {{ $paginator := .Paginate (where .Data.Pages "Type" "post") }}
     {{ range .Paginator.Pages }}
+
     {{ $url := replace .Permalink ( printf "%s" .Site.BaseURL) "" }}
         {{ if ne $url "about/" }}
             <li>
                 <a href='{{ .Permalink }}'><aside class="dates">{{ .Date.Format "Jan 2" }}</aside></a>
-                <a href='{{ .Permalink }}'>{{ .Title }} <h2>{{ .Description | markdownify }}</h2></a>
+                <a href='{{ .Permalink }}' class="post-list__description">{{ .Title }} <h2>{{ .Description | markdownify }}</h2></a>
+
+                <span class="taglist">
+                {{if .Params.tags }}
+                {{ range $index, $tag := .Params.tags }}
+                    <a href="{{ $baseurl }}tags/{{ $tag | urlize }}/" class="taglist__tag">{{ $tag }}</a>
+                {{ end }}
+                {{ end }}
+                </span>
             </li>
         {{ end }}
     {{ end }}
