--- a/themes/cactus/static/css/style.css
+++ b/themes/cactus/static/css/style.css
@@ -394,7 +394,7 @@ Post List
 	border-top: 1px solid #eee;
 }
 
-#post-list a {
+.post-list__description {
 	color: #333;
 	display: block;
 	font: bold 19px/1.7 "Helvetica Neue",helvetica,Arial,sans-serif;
@@ -406,6 +406,17 @@ Post List
 	top: 1px;
 	font: 300 17px/1.8 "Helvetica Neue",helvetica,Arial,sans-serif;
 	color: #bbb;
+}
+
+.taglist__tag{
+	background-color: #d1c4e9;
+	border: 2px solid #b39ddb;
+	border-radius: 3px;
+	color: #673ab7;
+	font-size: 12px;
+	font-weight: bold;
+	padding: 2px 4px;
+	margin-right: 5px;
 }
 
 #post-list-footer {
