--- a/themes/cactus/static/css/style.css
+++ b/themes/cactus/static/css/style.css
@@ -126,7 +126,7 @@ nav.main-nav a {
 	top: 8px;
 	right: 6px;
 	padding: 8px 12px;
-	color: #5badf0;
+	color: #673ab7;
 	font-size: 13px;
 	/*font-weight: bold;*/
 	line-height: 1.35;
@@ -166,11 +166,10 @@ a,
 #post-list li:hover .dates,
 #title:hover {
 	text-decoration: none;
-	color: #5badf0;
-	color: #5694f1;
+	color: #673ab7;
 }
 
-p a { color: #5694f1; }
+p a { color: #673ab7; }
 
 /*Transitions*/
 a,
@@ -435,9 +434,9 @@ Post List
 }
 
 #archive-link:hover {
-	background: #5694f1;
+	background: #673ab7;
 	color: #fff;
-	box-shadow: 0 0 0 1px #5694f1;
+	box-shadow: 0 0 0 1px #673ab7;
 }
 
 #archive-link span {
@@ -587,7 +586,7 @@ h2.month {
 }
 
 #archive-list li a:hover,#archive-list li:hover .dates {
-	color: #5694f1;
+	color: #673ab7;
 }
 
 #post-meta img.avatar {
@@ -608,7 +607,7 @@ h2.month {
 
 #post-list.archive.readmore a{
 	font: 400 16px/1.6 "Helvetica Neue",helvetica,Arial,sans-serif;
-	color: #5694f1;
+	color: #673ab7;
 }
 
 #post-list.archive.readmore a:hover{
