--- a/themes/cactus/layouts/partials/latest-posts.html
+++ b/themes/cactus/layouts/partials/latest-posts.html
@@ -1,6 +1,8 @@
 <ul id="post-list" class="archive readmore">
     <h3>{{ with .Site.Params.readMore }}{{ . }}{{ else }}Read more{{ end }}</h3>
-    {{ range first 10 .Site.Pages }}
+
+    {{ $pages := where .Site.Pages "Section" "post" }}
+    {{ range first 10 $pages }}
     {{ $url := replace .Permalink ( printf "%s" .Site.BaseURL) "" }}
         {{ if and (ne $url "about/") (ne $.Title .Title) }}
         <li>
